# sqlmodel-learning

./: .pre-commit-config.yaml  README.md  app.py  database.db  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
sqlmodel_learning/: db.py  engine.py  main.py
tests/integration/: test_main.py
