[metadata]
name = sqlmodel-learning
version = attr: sqlmodel_learning.__version__
description = "A repo for learning sqlite3 and sqlmodel"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
url = https://github.com/astrochun/sqlmodel-learning
project_urls =
    Tracker = https://github.com/astrochun/sqlmodel-learning/issues
    Source = https://github.com/astrochun/sqlmodel-learning
    Documentation = https://github.com/astrochun/sqlmodel-learning/blob/main/README.md
author = Chun Ly
author_email = astro.chun@gmail.com
maintainer = Chun Ly
maintainer_email = astro.chun@gmail.com

[options]
python_requires = >=3.10, <3.11
zip_safe = False
include_package_data = True
install_requires =
    rich >= 12.4.1, <13.0.0
    sqlmodel >= 0.0.6, < 1.0.0
packages =
    sqlmodel_learning

[options.extras_require]
test = pytest>=7.1.2, <8.0.0; pytest-cov>=3.0.0, <4.0.0
dev = pre-commit>=2.19.0, <3.0.0; pytest>=7.1.2, <8.0.0; pytest-cov>=3.0.0, <4.0.0
